# ApprovalTests.CommonScripts

./: .gitattributes  .gitignore  .windsurfrules  README.md  TODO.md  abandoned_files.py  approve_all.py  build-and-test  build-and-test.cmd  build_and_test  build_and_test.cmd  build_and_test_and_format.cmd  build_and_test_and_format.sh  ensure_uv_installed.cmd  ensure_uv_installed.sh  format_code.cmd  format_code.sh  format_code.txt  mdsnippets.json  pyproject.toml  remove_abandoned_files.py  requirements.dev.txt  test_.py  test__ensure_uv_installed  test__ensure_uv_installed.cmd  test_abandoned_files.py  test_approve_all.py  test_approve_all.test__console_output.approved.txt  test_approve_all.test__one_case.approved.txt  test_approve_all.test__zero_case.approved.txt  test_remove_abandoned_files.py  test_remove_abandoned_files.test__console_output.approved.txt  test_remove_abandoned_files.test__no_abandoned_files.approved.txt  test_remove_abandoned_files.test__reject.approved.txt  update_dependencies.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  dependabot-validate.yml  format-and-update-markdown-snippets.yml  format_and_mdsnippets_and_lint_fix.yml  ruff.yml  test__ensure_uv_installed.yml
docs/: README.md  agents.md  map.md
docs/explanations/: overview.md
docs/how_to/: run.md
docs/session_notes/: prompts.md
template_folder/.approval_tests_temp/: .failed_comparison.log.template
