[project]
name = "ApprovalTests.CommonScripts"
version = "0.0.0"

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.8"
exclude = ".venv/"
strict = true
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_no_return = true
# warn_unreachable = true
